--- a/.github/workflows/pr_guard.yml
+++ b/.github/workflows/pr_guard.yml
@@ -26,6 +26,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install requests
+          pip install requests openai
 
       - name: Run PR guard
         env:
