--- a/.github/workflows/pr_guard.yml
+++ b/.github/workflows/pr_guard.yml
@@ -25,8 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests
-          pip install requests openai
+          pip install requests openai pydantic
 
       - name: Run PR guard
         env:
